--- a/HTML/home.html
+++ b/HTML/home.html
@@ -257,6 +257,6 @@
     <p class="modal-message" id="modalMessage">You've successfully signed in!</p><button class="btn btn-primary" id="modalCloseBtn">Continue</button>
    </div>
   </div>
-  <script src="../DATA/game.js"></script>
+  <script src="../JS/game.js"></script>
 </body>
 </html>
